applets/digital-clock: Fix localization for TimeZoneModel

Translation for city name works only for names known by plasma-workspace at
build time. List of names generated by script timezonesi18n_generate.rb

If plasma-workspace is outdated and timezone provide new unknown name TimeZoneModel
will replace it by empty string.

Change behavior to ignore translation for unknown names and keep it as is.

BUG: 469196
FIXED-IN: 5.27.6


(cherry picked from commit 1f494a04c1654c32c9ba059f3331b370b64bae6b)